--- a/trix/templates/trix/trixadmin/base.django.html
+++ b/trix/templates/trix/trixadmin/base.django.html
@@ -44,7 +44,7 @@ Ext.create('Ext.data.Store', {
 
 {% block onready %}
 {{ block.super }}
-
+// TODO: what are these still doing here...
 Ext.create('Ext.data.Store', {
     model: 'trix.apps.trix.simplified.node.SimplifiedNodeSearch',
     id: 'trix.apps.trix.simplified.node.SimplifiedNodeStoreSearch',
