--- a/trix/templates/trix/base.django.html
+++ b/trix/templates/trix/base.django.html
@@ -7,7 +7,7 @@
         </title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 
-        <link rel="stylesheet" href="{{DEVILRY_THEME_URL }}/common.css"
+        <link rel="stylesheet" href="{{ DEVILRY_STATIC_URL }}/trix/common.css"
             type="text/css" media="screen" charset="utf-8"/>
 
         {% if debug %}
@@ -46,7 +46,6 @@
                 DEVILRY_STATIC_URL: '{{ DEVILRY_STATIC_URL }}',
                 DEVILRY_URLPATH_PREFIX: '{{ DEVILRY_URLPATH_PREFIX }}',
                 DEVILRY_LOGOUT_URL: '{{ DEVILRY_LOGOUT_URL }}',
-                DEVILRY_COMMON_CSS: '{{DEVILRY_THEME_URL }}/common.css',
                 DEVILRY_LOGIN_URL: '{% url login %}'
             });
 
