forgot to remove some unnecessary debugging code

--- a/trix/templates/trix/base.django.html
+++ b/trix/templates/trix/base.django.html
@@ -4,7 +4,7 @@
 <html lang="{{ LANGUAGE_CODE }}">
     <head>
       <title>
-            {% block title %}{{ page_title|default:"Trix" }} {% static "extjs4/" %} {% endblock %}
+            {% block title %}{{ page_title|default:"Trix" }}{% endblock %}
         </title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 
