--- a/trix/templates/trix/trixadmin/topic.django.html
+++ b/trix/templates/trix/trixadmin/topic.django.html
@@ -12,11 +12,11 @@
 {% include "trix/restful-stores.js" %}
 
 {{ block.super }}
-Ext.require('devilry.extjshelpers.formfields.ForeignKeySelector');
-Ext.require('devilry.extjshelpers.RestfulSimplifiedEditWindowBase');
-Ext.require('devilry.extjshelpers.RestfulSimplifiedEditPanel');
-Ext.require('devilry.extjshelpers.ButtonBarButton');
-Ext.require('devilry.extjshelpers.ButtonBar');
+Ext.require('trix_extjshelpers.formfields.ForeignKeySelector');
+Ext.require('trix_extjshelpers.RestfulSimplifiedEditWindowBase');
+Ext.require('trix_extjshelpers.RestfulSimplifiedEditPanel');
+Ext.require('trix_extjshelpers.ButtonBarButton');
+Ext.require('trix_extjshelpers.ButtonBar');
 Ext.require('trix.forms.Exercise');
 Ext.require('trix.ModelView');
 Ext.require('trix.TopicView');
