--- a/trix/templates/trix/base.django.html
+++ b/trix/templates/trix/base.django.html
@@ -33,7 +33,7 @@
                 enabled: true,
                 paths: {
 	            'trix_extjshelpers': '{{ DEVILRY_STATIC_URL }}/extjshelpers_classes/extjshelpers',
-                    'devilry': '{{ DEVILRY_STATIC_URL }}/extjs_classes',
+                    //'devilry': '{{ DEVILRY_STATIC_URL }}/extjs_classes',
                     'Ext': '{{ DEVILRY_STATIC_URL }}/extjsux',
                     'trix': '{{ DEVILRY_STATIC_URL }}/extjstrix',
 	            'devilry_extjsextras': '{{ DEVILRY_STATIC_URL }}/devilry_extjsextras',
