--- a/trix/templates/trix/trixadmin/exercise.django.html
+++ b/trix/templates/trix/trixadmin/exercise.django.html
@@ -10,11 +10,11 @@
 {% include "trix/restful-models.js" %}
 
 {{ block.super }}
-    Ext.require('devilry.extjshelpers.formfields.ForeignKeySelector');
-    Ext.require('devilry.extjshelpers.RestfulSimplifiedEditWindowBase');
-    Ext.require('devilry.extjshelpers.RestfulSimplifiedEditPanel');
-    Ext.require('devilry.extjshelpers.ButtonBarButton');
-    Ext.require('devilry.extjshelpers.ButtonBar');
+    Ext.require('trix_extjshelpers.formfields.ForeignKeySelector');
+    Ext.require('trix_extjshelpers.RestfulSimplifiedEditWindowBase');
+    Ext.require('trix_extjshelpers.RestfulSimplifiedEditPanel');
+    Ext.require('trix_extjshelpers.ButtonBarButton');
+    Ext.require('trix_extjshelpers.ButtonBar');
     Ext.require('trix.forms.Exercise');
     Ext.require('trix.ModelView');
     Ext.require('trix.ExerciseView');
