templates...base: syncRequire devilry.extjshelpers.RestProxy.

--- a/trix/templates/trix/base.django.html
+++ b/trix/templates/trix/base.django.html
@@ -58,6 +58,7 @@
                 is_authenticated: {{ user.is_authenticated|yesno:"true,false" }},
                 username: '{{ user.username }}'
             });
+            Ext.syncRequire('devilry.extjshelpers.RestProxy');
 
             Ext.onReady(function() {
                 Ext.QuickTips.init();
