Fixed the padding of the main pages.

--- a/trix/templates/trix/main.django.html
+++ b/trix/templates/trix/main.django.html
@@ -94,7 +94,7 @@ Ext.require('trix.GroupList');
             xtype: 'container',
             border: false,
             region: 'center',
-            padding: {left: 20, right: 20},
+            padding: '0 20px 0 20px',
             flex: 2,
             layout: {
                 type: 'vbox',
