Update some ExtJS 4.0 style paddings.

--- a/trix/templates/trix/trixadmin/topic.django.html
+++ b/trix/templates/trix/trixadmin/topic.django.html
@@ -42,7 +42,7 @@ Ext.create('Ext.container.Viewport', {
         region: 'center',
         xtype: 'container',
         region: 'center',
-        padding: {left: 20, right: 20},
+        padding: "0 20px 0 20px",
         flex: 2,
         layout: {
             type: 'vbox',
