--- a/trix/templates/trix/trixadmin/exercise.django.html
+++ b/trix/templates/trix/trixadmin/exercise.django.html
@@ -38,7 +38,7 @@
             region: 'center',
             xtype: 'container',
             region: 'center',
-            padding: {left: 20, right: 20},
+            padding: "0 20px 0 20px",
             flex: 2,
             layout: {
                 type: 'vbox',
